<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Form2Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_conta"
        android:layout_width="156dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/criar_nova_conta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_passo"
        android:layout_width="106dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/passo_2_de_2"
        android:textColor="@color/cinza"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_conta" />

    <View
        android:id="@+id/containerComponentes"
        style="@style/ConteinerComponentes"
        android:layout_width="362dp"
        android:layout_height="449dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_passo" />

    <EditText
        android:id="@+id/edit_endereco"
        style="@style/Edit_Text"
        android:layout_marginTop="28dp"

        android:hint="@string/endereco"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/containerComponentes"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_bairro"
        style="@style/Edit_Text"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/bairro"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_endereco" />

    <EditText
        android:id="@+id/edit_cidade"
        style="@style/Edit_Text"
        android:layout_marginTop="80dp"
        android:layout_marginRight="120dp"
        android:autofillHints=""
        android:hint="@string/cidade"
        app:layout_constraintEnd_toStartOf="@+id/edit_uf"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_bairro" />

    <EditText
        android:id="@+id/edit_uf"
        style="@style/Edit_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/uf"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_bairro"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_cep"
        style="@style/Edit_Text"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/cep"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_cidade" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_criarConta"
        style="@style/Button"
        android:layout_marginTop="80dp"
        android:text="@string/criarConta"
        app:layout_constraintBottom_toBottomOf="@+id/containerComponentes"
        app:layout_constraintEnd_toEndOf="@id/containerComponentes"
        app:layout_constraintStart_toStartOf="@id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_cep" />

    <Button
        android:id="@+id/text_tela_login"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/text_login"
        android:textColor="@color/cinza"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponentes"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>