<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/containerComponentes"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_email"
        tools:ignore="TextFields" />

    <View
        android:id="@+id/containerComponentes"
        style="@style/ConteinerComponentes"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/text_cadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/progresseBar" />

    <ProgressBar
        android:id="@+id/progresseBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponentes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_marginTop="60dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>