<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/containerComponentes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/containerComponentes"
        style="@style/ConteinerComponentes"

        android:layout_marginTop="72dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toTopOf="@+id/progresseBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/containerComponentes"

        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:layout_marginTop="76dp"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
        app:layout_constraintStart_toStartOf="@+id/containerComponentes"
        app:layout_constraintTop_toTopOf="@+id/edit_email"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:layout_marginTop="80dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_senha" />

    <ProgressBar
        android:id="@+id/progresseBar"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponentes"
        />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/text_cadastro"
        android:textColor="@color/cinza"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progresseBar"

        />

    <TextView
        android:id="@+id/text_conta"
        android:layout_width="173dp"
        android:layout_height="31dp"
        android:text="Acesse sua conta"
        android:textSize="20dp"

        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="172dp" />

</androidx.constraintlayout.widget.ConstraintLayout>